// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLinks Matches snapshot with a hash 1`] = `
<div>
  <a
    class="link"
    href="#test"
  >
    Skip
  </a>
</div>
`;

exports[`SkipLinks Matches snapshot with an external destination 1`] = `
<div>
  <a
    class="link"
    href="https://a11y.com"
  >
    Skip
  </a>
</div>
`;
